crates/mm1-address/src/pool/snapshots/mm1_address__pool__trie__tests__pool_01.snap
---
source: crates/mm1-address/src/pool/trie.rs
expression: "&pool"
snapshot_kind: text
---
Pool {
    root: Some(
        Node {
            addr: "fffffffffffffffe (1111111111111111111111111111111111111111111111111111111111111110)",
            mask: "fffffffffffffffe (1111111111111111111111111111111111111111111111111111111111111110)",
            next: Leaf,
        },
    ),
}
