crates/mm1-address/src/pool/snapshots/mm1_address__pool__trie__tests__pool_04.snap
---
source: crates/mm1-address/src/pool/trie.rs
expression: "([a_61, a_62, a_63, a_64,], &pool)"
snapshot_kind: text
---
(
    [
        18446744073709551600,
        18446744073709551608,
        18446744073709551612,
        18446744073709551614,
    ],
    Pool {
        root: Some(
            Node {
                addr: "ffffffffffffffff (1111111111111111111111111111111111111111111111111111111111111111)",
                mask: "ffffffffffffffff (1111111111111111111111111111111111111111111111111111111111111111)",
                next: Leaf,
            },
        ),
    },
)
