crates/mm1-address/src/pool/snapshots/mm1_address__pool__trie__tests__pool_06.snap
---
source: crates/mm1-address/src/pool/trie.rs
expression: "&pool"
snapshot_kind: text
---
Pool {
    root: Some(
        Node {
            addr: "fffffffffffffff0 (1111111111111111111111111111111111111111111111111111111111110000)",
            mask: "fffffffffffffff0 (1111111111111111111111111111111111111111111111111111111111110000)",
            next: Leaf,
        },
    ),
}
